--- a/html/preg.html
+++ b/html/preg.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>CEO Planner System - Executive Productivity Tools</title>
+  <title>Astro Rescue Ventures - CEO Planner System</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <style>
@@ -602,6 +602,26 @@
       color: var(--primary);
     }
 
+    /* Security Badges */
+    .security-badges {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin: 30px 0;
+    }
+
+    .security-badge {
+      display: flex;
+      align-items: center;
+      gap: 8px;
+      color: var(--gray);
+      font-size: 14px;
+    }
+
+    .security-badge i {
+      color: var(--success);
+    }
+
     /* Animations */
     @keyframes fadeInUp {
       from {
@@ -661,11 +681,11 @@
     <header class="header">
       <div class="logo-container">
         <div class="logo">
-          <i class="fas fa-briefcase"></i>
+          <i class="fas fa-shield-alt"></i>
         </div>
         <div class="logo-text">
-          <h1>CEO Planner System</h1>
-          <p>Executive Productivity Tools</p>
+          <h1>Astro Rescue Ventures</h1>
+          <p>CEO Planner System</p>
         </div>
       </div>
       <div class="nav-buttons">
@@ -682,6 +702,19 @@
       </div>
       <h1>Master Your Time,<br>Amplify Your Impact</h1>
       <p>The comprehensive planning system designed specifically for executives, founders, and leaders who want to achieve more in less time while reducing stress and overwhelm.</p>
+      
+      <!-- Security Badges -->
+      <div class="security-badges">
+        <div class="security-badge">
+          <i class="fas fa-lock"></i>
+          <span>256-bit SSL Encryption</span>
+        </div>
+        <div class="security-badge">
+          <i class="fas fa-shield-alt"></i>
+          <span>PCI DSS Compliant</span>
+        </div>
+      </div>
+      
       <div class="cta-container">
         <a href="#pricing" class="cta-primary">
           <i class="fas fa-rocket"></i>
@@ -869,7 +902,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <p>&copy; 2024 CEO Planner System. Executive productivity tools for modern leaders.</p>
+      <p>&copy; 2024 Astro Rescue Ventures. Executive productivity tools for modern leaders.</p>
       <div class="footer-links">
         <a href="#" class="footer-link">Privacy Policy</a>
         <a href="#" class="footer-link">Terms of Service</a>
