--- a/html/preg.html
+++ b/html/preg.html
@@ -848,6 +848,7 @@
           <li><i class="fas fa-check"></i> Lifetime Updates & Support</li>
         </ul>
 
+        <!-- This button now links to the payment page -->
         <a href="payment.html" class="cta-primary">
           <i class="fas fa-lock"></i>
           Get Instant Access - $75
